--- a/.gitmodules
+++ b/.gitmodules
@@ -19,4 +19,4 @@
 	url = https://github.com/nomic-ai/QXlsx.git
 [submodule "gpt4all-chat/deps/Jinja2Cpp"]
 	path = gpt4all-chat/deps/Jinja2Cpp
-	url = https://github.com/jinja2cpp/Jinja2Cpp.git
+	url = https://github.com/nomic-ai/jinja2cpp.git
